@@ -1,7 +1,50 @@
 Docx4j release process
 ======================
 
-[Do this process for a release candidate first]
+Do this process for a beta then a release candidate first; 
+ beta & RC should be pushed to maven repo on GitHub - see notes in pom.
+ Create beta from docx4j-ImportXHTML, since beta can include that stuff.
+ But don't bother putting that in maven repo.
+ Use mvn to build docx4j-ImportXHTML, but then ant to gather the jars 
+
+In docx4j pom:
+
+<!-- Uncomment to deploy to GitHub.  MUST Comment out for real release
+<distributionManagement>
+:
+ 
+ 
+When it comes to the actual release, follow the below for:
+
++ docx4j
+
++ xhtmlrenderer
++ docx4j-ImportXHTML
+
++ docx4j-MOXy
+
++ Enterprise Ed. 
+
++ .NET dist
+
+
+
+TODO: make toolchain UTF-8 filename safe ie git, zip, unzip
+
+ 
+---------- 
+
+Update CHANGELOG.md, README.md with release info.
+
+    http://www.jukie.net/bart/blog/pimping-out-git-log
+        
+(refer to CHANGELOG.md to see what rnumber to start at)  
+
+    git lg b6c12c8..HEAD > stuff.txt  
+
+Update pom.xml with target version number (must still be -SNAPSHOT)
+
+Update build.xml so it has the same version as pom.xml (but without  -SNAPSHOT) 
 
 Check everything is committed
 
@@ -9,17 +52,14 @@ Update Getting Started as necessary (inc HTML and PDF versions)
 
 Check jar versions in pom.xml, build.xml
 
-Run JarCheck on result of mvn install to check its compiled for 1.5
+mvn clean
 
-Update README.txt with release info.
+Run JarCheck on result of mvn install to check its compiled for 1.6 (run it on all jars in dist)
 
-    http://www.jukie.net/bart/blog/pimping-out-git-log
-    
-(refer to README.txt to see what rnumber to start at)    
-
-Update pom.xml with target version number (must still be -SNAPSHOT)
+(Jar not clean? avoid mixing mvn and eclipse (test?) output)
 
 git commit / push upstream
+(uses git-remote-https, if you want to force a particular network connection)
 
 Start up the Git Bash session and go to your project directory.
 
@@ -27,7 +67,7 @@ Windows users, you need to start up an SSH agent to provide your passkey when ne
 
 To do this, in your Git Shell type :
 
-    1eval `ssh-agent`  //pay attention to the back tick quotes here
+    eval `ssh-agent`  //pay attention to the back tick quotes here
     
 which should return a piece of text like Agent pid xyz. This command starts the agent and sets up a couple of 
 environment variables relating to the SSH agent. 
@@ -47,13 +87,15 @@ Github RSA key is in the c:\.ssh\ directory. If it isn’t then just substitute 
 $ ssh-add ~/.ssh/id_rsa
 Enter passphrase for /c/Users/jharrop/.ssh/id_rsa: [the github 2 one]
 
+This command prompt can be used to do what follows for the 4 projects.  ie the above only needs to be done once :-)
+
 then per https://docs.sonatype.org/display/Repository/Sonatype+OSS+Maven+Repository+Usage+Guide
 
 mvn release:clean
 
 mvn release:prepare
 
-in prepare, prompt for passphrase is the *other* one 
+in prepare, prompt for passphrase is the *other* one [e..]
 (if you bugger it up, do git reset --hard, and start again with clean!)
 
 release:prepare ends with:
@@ -149,14 +191,16 @@ since it says it
 
 	don't handle protocol 'git@github.com:file'
 
-You can'so just do:
+so just do:
 
 	$ mvn release:perform -X 
 
-and be patient .. it may look like nothing is happening 
+(don't need to worry about presence of bin-testOutput dir etc)
+
+.. be patient .. it may look like nothing is happening 
 (frozen checking out... and no network traffic), but have faith....
 
-enter code signing password again
+enter code signing password again [ie e..]
 
 .. then its upload to oss.sonatype.org
 
@@ -201,19 +245,28 @@ Then release it - see https://docs.sonatype.org/display/Repository/Sonatype+OSS+
 
 -------
 
+Repeat above for -ImportXHTML
 
-ANT_OPTS="-Xmx512m -XX:MaxPermSize=256m" ant dist
-
-    (Remove the jaxb jars from dist dir)
-    
-    but for consistency, use the docx4j jar maven made.
-    
-    Put Getting Started in the dist dir
-
-    Create docx4j-x.x.x.zip (ant dist, rename the jar as well)
-
-Update build.xml so it has the same version as pom.xml
+Run ant release (requires both docx4j and -ImportXHTML to be in maven)
+ 
 
 ----
 
 Announce release in docx4j forum
+
+----
+
+.NET releases
+
+Nuget publish procedure:
+1.	use ant to create the DLL
+	a.	(no SNK for Nuget)
+2.	in Visual Studio, remove reference to existing DLL; copy/add the new one
+3.	update docx4j.properties (don't need that in -ImportXHTML nuspec, since it is pulled in automatically)
+4.	test it works
+5.	open the existing .nuspec file (inNuGet Package Explorer)
+6.	update the version number etc
+7.	save it
+8.	publish (key is in user profiles doc)
+9.  extract new .nuspec file from .nupkg (since the tool doesn't seem to save it)
+9.  push to GitHub
